--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <a href="/index.html">Home</a>
             <a href="https://instagram.com">Instagram</a>
             <a href="">GitHub</a>
-            <a href="/produtos.html">Produtos</a>
+            <a href="produtos.html">Produtos</a>
         </div>
         <div id="conteudo_principal">
             <h1>Sobre a Jeferson Barbearia</h1>
